src/styles.css
#photo-frame-overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
}

#photo-frame-overlay img {
  width: 100%;
  height: calc(100% - 50px);
  object-fit: cover;
  margin-top: 50px;
}

#muteButton {
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 1002;
  background-color: #b49f6a;
  color: white;
  border: none;
  border-radius: 25px;
  padding: 10px 20px;
  font-size: 16px;
  font-family: 'Kiwi Maru', serif;
  cursor: pointer;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  transition: background-color 0.3s, transform 0.3s;
}

#muteButton:hover {
  background-color: #b49f6a;
  transform: scale(1.05);
}

#muteButton:active {
  transform: scale(0.95);
}

.icon {
  margin-right: 8px;
}

.fortune-dialog {
    border: none;
    border-radius: 8px;
    padding: 0;
    max-width: 80%;
    max-height: 80%;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
}
  
.fortune-dialog::backdrop {
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(3px);
}
  
.fortune-content {
    padding: 24px;
    font-family: 'Kiwi Maru', serif;
}
  
.fortune-content h2 {
    margin-top: 0;
    color: #333;
    font-size: 24px;
    text-align: center;
    margin-bottom: 16px;
}

#fortune-text {
    margin-top: 0;
    color: #333;
    font-size: 24px;
    text-align: center;
    margin-bottom: 16px;
}
  
#fortune-details {
    color: #555;
    font-size: 2vw;
    font-family: 'Kiwi Maru', serif;
    line-height: 1.6;
    margin-bottom: 24px;
}
  
#close-fortune {
    display: block;
    width: 100%;
    padding: 12px;
    background-color: #b49f6a;
    color: white;
    border: none;
    font-size: 16px;
    font-family: 'Kiwi Maru', serif;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
  
#close-fortune:hover {
    background-color: #5c4f2f;
}
  
/* アニメーション */
@keyframes fadeIn {
    from { opacity: 0; transform: scale(0.9); }
    to { opacity: 1; transform: scale(1); }
}

.fortune-dialog[open] {
    animation: fadeIn 0.3s ease-out;
}

